--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>My Portfolio</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>👋 Hi, I'm Sufyan</h1>
+            <h1>👋 Hi, I'm sufi</h1>
             <p>Frontend Developer | Designer | Tech Enthusiast</p>
         </div>
     </header>
